# circom-witness-rs

./: Cargo.toml  build.rs
script/: replace.sh
src/: field.rs  generate.rs  graph.rs  lib.rs
src/generate/: field.rs  mod.rs
tests/: integration_test.rs
